Added new expression for filter

--- a/TestingSystem/WebContent/WEB-INF/web.xml
+++ b/TestingSystem/WebContent/WEB-INF/web.xml
@@ -26,6 +26,10 @@
     <filter-name>TSFilter</filter-name>
     <url-pattern>/LecturerServlet</url-pattern>
   </filter-mapping>
+  <filter-mapping>
+    <filter-name>TSFilter</filter-name>
+    <url-pattern>/html/*</url-pattern>
+  </filter-mapping>
   <welcome-file-list>
     <welcome-file>TestingSystemServlet</welcome-file>
   </welcome-file-list>
