--- a/DataMiningDemo/WebContent/WEB-INF/web.xml
+++ b/DataMiningDemo/WebContent/WEB-INF/web.xml
@@ -1,12 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
+
+  <filter>
+    <filter-name>DMFilter</filter-name>
+    <filter-class>
+	        controller.DMFilter
+	</filter-class>
+  </filter>
+   <filter-mapping>
+    <filter-name>DMFilter</filter-name>
+    <url-pattern>/DataMiningServlet</url-pattern>
+    <url-pattern>/html/*</url-pattern>
+  </filter-mapping>
+
   <display-name>DataMiningDemo</display-name>
   <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
+    <welcome-file>LoginServlet</welcome-file>
   </welcome-file-list>
 </web-app>
